--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "gmod-types",
-    "version": "0.4.1",
+    "name": "dasdarki-gmod-types",
+    "version": "0.4.2",
     "description": "",
     "main": "index.js",
     "scripts": {
